--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "react-scripts": "1.0.17"
   },
   "scripts": {
+    "sass": "node-sass -rw src/components -o src/components",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "devDependencies": {}
 }
