--- a/package.json
+++ b/package.json
@@ -14,5 +14,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "react-router-dom": "^4.2.2"
+  }
 }
