user query ~ frontend -> backend prototype

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
     "node-wit": "^4.3.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
