--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "node-wit": "^4.3.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-p5-wrapper": "0.0.4",
     "react-scripts": "1.0.17",
+    "react-speech-recognition": "^1.0.4",
     "request": "^2.83.0"
   },
   "scripts": {
