--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "sass": "node-sass -rw src/components -o src/components",
-    "start": "react-scripts start",
+    "start": "react-scripts start & node ./server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
