--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "mongoose": "^5.0.0-rc2",
     "node-fetch": "^1.7.3",
     "node-wit": "^4.3.0",
