--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "mocha": "^5.0.0",
     "mongoose": "^5.0.0-rc2",
     "node-fetch": "^1.7.3",
     "node-wit": "^4.3.0",
+    "nodemon": "^1.14.11",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-p5-wrapper": "0.0.4",
@@ -20,7 +23,7 @@
     "sass": "node-sass -rw src/components -o src/components",
     "start": "react-scripts start & node ./server/server.js",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "nodemon --exec 'mocha -R min'",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
