--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "google-map-react": "^0.28.0",
     "mongoose": "^5.0.0-rc2",
     "node-fetch": "^1.7.3",
     "node-wit": "^4.3.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-google-maps": "^9.4.5",
     "react-p5-wrapper": "0.0.4",
     "react-scripts": "1.0.17",
     "react-speech-recognition": "^1.0.4",
